--- a/DuelWitch.vcxproj
+++ b/DuelWitch.vcxproj
@@ -192,6 +192,7 @@
     <ClCompile Include="Sources\Game\FreezeMagic.cpp" />
     <ClCompile Include="Sources\Game\FreezeMagicShooter.cpp" />
     <ClCompile Include="Sources\Game\GridFloor.cpp" />
+    <ClCompile Include="Sources\Game\LogoScene.cpp" />
     <ClCompile Include="Sources\Game\MagicFactory.cpp" />
     <ClCompile Include="Sources\Game\MagicManager.cpp" />
     <ClCompile Include="Sources\Game\MoveCommand.cpp" />
@@ -233,6 +234,7 @@
     <ClInclude Include="Sources\Game\FreezeMagicShooter.h" />
     <ClInclude Include="Sources\Game\IMagic.h" />
     <ClInclude Include="Sources\Game\IMagicShooter.h" />
+    <ClInclude Include="Sources\Game\LogoScene.h" />
     <ClInclude Include="Sources\Game\Magic.h" />
     <ClInclude Include="Sources\Game\MagicFactory.h" />
     <ClInclude Include="Sources\Game\MagicManager.h" />
@@ -261,8 +263,11 @@
     <ClInclude Include="Sources\Game\ThunderStrikeMagicShooter.h" />
     <ClInclude Include="Sources\Game\Transform.h" />
     <ClInclude Include="Sources\pch\pch.h" />
+    <ClInclude Include="Sources\Utils\ErrorMessage.h" />
     <ClInclude Include="Sources\Utils\MathUtils.h" />
     <ClInclude Include="Sources\Utils\RandMt.h" />
+    <ClInclude Include="Sources\Utils\ServiceLocater.h" />
+    <ClInclude Include="Sources\Utils\Singleton.h" />
   </ItemGroup>
   <ItemGroup>
     <MeshContentTask Include="Assets\Models\Protected\bloom.FBX">
