読み込みデータを静的なポインタで管理するように

--- a/DuelWitch.vcxproj
+++ b/DuelWitch.vcxproj
@@ -214,8 +214,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Sources\Utils\JsonWrapper.cpp" />
     <ClCompile Include="Sources\Utils\LoadData.cpp" />
+    <ClCompile Include="Sources\Utils\JsonWrapper.cpp" />
     <ClCompile Include="Sources\Utils\LoadDataManager.cpp" />
     <ClCompile Include="Sources\Utils\RandMt.cpp" />
     <ClCompile Include="Sources\Utils\Resource.cpp" />
@@ -270,7 +270,9 @@
     <ClInclude Include="Sources\Game\Transform.h" />
     <ClInclude Include="Sources\pch\pch.h" />
     <ClInclude Include="Sources\Utils\ErrorMessage.h" />
+    <ClInclude Include="Sources\Utils\LoadData.h" />
     <ClInclude Include="Sources\Utils\JsonWrapper.h" />
+    <ClInclude Include="Sources\Utils\LoadDataID.h" />
     <ClInclude Include="Sources\Utils\LoadDataManager.h" />
     <ClInclude Include="Sources\Utils\MathUtils.h" />
     <ClInclude Include="Sources\Utils\NonCopyable.h" />
@@ -279,7 +281,6 @@
     <ClInclude Include="Sources\Utils\Resource.h" />
     <ClInclude Include="Sources\Utils\ResourceID.h" />
     <ClInclude Include="Sources\Utils\ResourceManager.h" />
-    <ClInclude Include="Sources\Utils\LoadData.h" />
     <ClInclude Include="Sources\Utils\ServiceLocater.h" />
     <ClInclude Include="Sources\Utils\Singleton.h" />
   </ItemGroup>
@@ -303,4 +304,9 @@
     <Import Project="$(VCTargetsPath)\BuildCustomizations\MeshContentTask.targets" />
     <Import Project="$(VCTargetsPath)\BuildCustomizations\ShaderGraphContentTask.targets" />
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties Resources_4Jsons_4move_3command_1json__JSONSchema="http://json.schemastore.org/2.0.0-csd.2.beta.2018-10-10.json" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
